--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -25,7 +25,7 @@
   // @import "./ui-kit/range";
 }
 
-// @import "./ui-kit/custom";
+@import "./ui-kit/custom";
 @import "./ui-kit/waved";
 @import "./ui-kit/movement";
 
