--- a/src/includes/footer.html
+++ b/src/includes/footer.html
@@ -1,36 +1,52 @@
-      <!-- Карта -->
-
-      <!-- <section class="container container--distance relative bg-grey overflow-hidden h-96 dark:bg-dark">
-        <div class="loader">
-          <span class="loader-progress">
-            <svg class="loader-icon icon">
-              <use xlink:href="img/icons.svg#loader">
-            </svg>
-          </span>
-        </div>
-        <div class="absolute inset-0 overflow-hidden" id="map"></div>
-      </section> -->
-
       <!-- Подвал -->
 
-      <!-- <footer class="container flex flex-wrap flex-col md:flex-row items-center justify-between gap-4 bg-black text-second pt-4 pb-10 md:pb-4" id="footer">
-        <a class="btn w-[150px]" data-waved="light" href="/">
+      <footer class="container relative overflow-hidden">
+        <div class="absolute inset-0">
+          <img class="hidden xl:block absolute top-[120px] -left-0 w-full max-w-[200px]" src="img/pictures/syringe.svg" alt="">
+          <img class="hidden xl:block absolute bottom-10 right-[100px] w-full max-w-[170px]" src="img/pictures/pill-circle.svg" alt="">
+        </div>
+        <div class="relative">
           <picture>
-            <source srcset="img/pictures/logo.webp" type="image/webp">
-            <img class="w-full" src="img/pictures/logo.png" alt="">
+            <source srcset="img/pictures/catalog.webp" type="image/webp">
+            <img class="hidden lg:block absolute top-7 left-[350px] w-full max-w-[975px]" src="img/pictures/catalog.png" alt="">
           </picture>
-        </a>
-        <address class="text-center text-16 leading-4">​Рождественская набережная, <br> 45/1​5 офис; 3 этаж</address>
-        <span class="btn btn-second text-18 w-max p-1" data-waved="light" data-fancybox-dialog data-type="ajax" data-src="dialogs/dialog-politics.html">Privacy policy</span>
-        <span class="text-18">
-          Разработка: <a class="underline w-max" href="https://stdkit.ru/" target="_blank">Студия К.И.Т.</a>
-        </span>
+          <div class="flex flex-col items-start relative w-full lg:max-w-[670px]">
+            <h2 class="font-semibold uppercase text-26 sm:text-30 md:text-36 leading-3 mb-4 duration-5 anim anim--right" data-anim="hidden">СТАНЬТЕ ЧАСТЬЮ БОЛЬШОЙ И УЗНАВАЕМОЙ АПТЕЧНОЙ СЕТИ НА СПЕЦИАЛЬНЫХ УСЛОВИЯХ</h2>
+            <h3 class="font-normal text-14 md:text-16 leading-5 mb-4 lg:mb-8 duration-5 anim anim--right" data-anim="hidden">
+              Получите подробную презентацию управленческой <br class="hidden lg:block">
+              франшизы и консультацию эксперта по работе <br class="hidden lg:block">
+              аптечной франшизы в вашем городе.
+            </h3>
+            <button class="btn btn-primary btn-lg sm:btn-xl btn-fill uppercase text-18 sm:text-24 w-full sm:w-auto mb-6 sm:mb-10" data-waved="light">
+              СКАЧАТЬ ПРЕЗЕНТАЦИЮ
+              <svg class="icon hidden sm:block text-28 ml-2">
+                <use xlink:href="img/icons.svg#download">
+              </svg>
+            </button>
+            <div class="flex flex-col items-start gap-3">
+              <a class="btn btn-primary text-black font-medium text-20 leading-3" data-waved="light" href="tel: +7 999 999 99 99">
+                <svg class="icon mr-3">
+                  <use xlink:href="img/icons.svg#tel">
+                </svg>
+                +7 999 999 99 99
+              </a>
+              <a class="btn btn-primary text-black font-medium text-20 leading-3" data-waved="light" href="" target="_blank">
+                <svg class="icon mr-3">
+                  <use xlink:href="img/icons.svg#tg">
+                </svg>
+                @telegram
+              </a>
+              <a class="btn btn-primary text-black font-medium text-20 leading-3" data-waved="light" href="mailto: email@email.com">
+                <svg class="icon mr-3">
+                  <use xlink:href="img/icons.svg#email">
+                </svg>
+                email@email.com
+              </a>
+            </div>
+          </div>
+        </div>
       </footer>
 
-      </div>
-      </div> -->
-
-      </div>
       </div>
 
       </body>
