--- a/src/includes/footer.html
+++ b/src/includes/footer.html
@@ -24,19 +24,19 @@
               </svg>
             </button>
             <div class="flex flex-col items-start gap-3">
-              <a class="btn btn-primary text-black font-medium text-20 leading-3" data-waved="light" href="tel: +7 999 999 99 99">
+              <a class="flex items-center font-medium text-16 sm:text-20 leading-3 hover:text-primary duration-3" href="tel: +7 999 999 99 99">
                 <svg class="icon mr-3">
                   <use xlink:href="img/icons.svg#tel">
                 </svg>
                 +7 999 999 99 99
               </a>
-              <a class="btn btn-primary text-black font-medium text-20 leading-3" data-waved="light" href="" target="_blank">
+              <a class="flex items-center font-medium text-16 sm:text-20 leading-3 hover:text-primary duration-3" href="" target="_blank">
                 <svg class="icon mr-3">
                   <use xlink:href="img/icons.svg#tg">
                 </svg>
                 @telegram
               </a>
-              <a class="btn btn-primary text-black font-medium text-20 leading-3" data-waved="light" href="mailto: email@email.com">
+              <a class="flex items-center font-medium text-16 sm:text-20 leading-3 hover:text-primary duration-3" href="mailto: email@email.com">
                 <svg class="icon mr-3">
                   <use xlink:href="img/icons.svg#email">
                 </svg>
