--- a/src/includes/footer.html
+++ b/src/includes/footer.html
@@ -17,30 +17,30 @@
               франшизы и консультацию эксперта по работе <br class="hidden lg:block">
               аптечной франшизы в вашем городе.
             </h3>
-            <button class="btn btn-primary btn-lg sm:btn-xl btn-fill uppercase text-18 sm:text-24 w-full sm:w-auto mb-6 sm:mb-10" data-waved="light">
+            <button class="btn btn-primary btn-lg sm:btn-xl btn-fill uppercase text-18 sm:text-24 w-full sm:w-auto mb-6 sm:mb-10" data-waved="light" data-fancybox-dialog data-type="ajax" data-src="dialogs/dialog-presentation.html">
               СКАЧАТЬ ПРЕЗЕНТАЦИЮ
               <svg class="icon hidden sm:block text-28 ml-2">
                 <use xlink:href="img/icons.svg#download">
               </svg>
             </button>
             <div class="flex flex-col items-start gap-3">
-              <a class="flex items-center font-medium text-16 sm:text-20 leading-3 hover:text-primary duration-3" href="tel: +7 999 999 99 99">
+              <a class="flex items-center font-medium text-16 sm:text-20 leading-3 hover:text-primary duration-3" href="tel: +7 910 939 25 15">
                 <svg class="icon mr-3">
                   <use xlink:href="img/icons.svg#tel">
                 </svg>
-                +7 999 999 99 99
+                +7 910 939 25 15
               </a>
-              <a class="flex items-center font-medium text-16 sm:text-20 leading-3 hover:text-primary duration-3" href="" target="_blank">
+              <a class="flex items-center font-medium text-16 sm:text-20 leading-3 hover:text-primary duration-3" href="https://t.me/Varpetian" target="_blank">
                 <svg class="icon mr-3">
                   <use xlink:href="img/icons.svg#tg">
                 </svg>
-                @telegram
+                @Varpetian
               </a>
-              <a class="flex items-center font-medium text-16 sm:text-20 leading-3 hover:text-primary duration-3" href="mailto: email@email.com">
+              <a class="flex items-center font-medium text-16 sm:text-20 leading-3 hover:text-primary duration-3" href="mailto: a.varpetian@aptfarma.ru">
                 <svg class="icon mr-3">
                   <use xlink:href="img/icons.svg#email">
                 </svg>
-                email@email.com
+                a.varpetian@aptfarma.ru
               </a>
             </div>
           </div>
